// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`init.behavior.idempotent given: [case5] direct: idempotent rerun on same behavior when: [t0] init.behavior executed twice with same name then: second run succeeds (idempotent): first run output 1`] = `
"🦫 oh, behave!
   ├─ + 0.wish.md
   ├─ + 1.vision.guard
   ├─ + 1.vision.stone
   ├─ + 2.1.criteria.blackbox.stone
   ├─ + 2.2.criteria.blackbox.matrix.stone
   ├─ + 2.3.criteria.blueprint.stone
   ├─ + 3.1.1.research.external.product.access._.v1.stone
   ├─ + 3.1.1.research.external.product.claims._.v1.stone
   ├─ + 3.1.3.research.internal.product.code.prod._.v1.stone
   ├─ + 3.1.3.research.internal.product.code.test._.v1.stone
   ├─ + 3.1.5.research.reflection.product.audience._.v1.stone
   ├─ + 3.1.5.research.reflection.product.premortem._.v1.stone
   ├─ + 3.1.5.research.reflection.product.rootcause._.v1.stone
   ├─ + 3.2.distill.repros.experience._.v1.guard
   ├─ + 3.2.distill.repros.experience._.v1.stone
   ├─ + 3.3.1.blueprint.product.v1.guard
   ├─ + 3.3.1.blueprint.product.v1.stone
   ├─ + 4.1.roadmap.v1.stone
   ├─ + 5.1.execution.phase0_to_phaseN.v1.guard
   ├─ + 5.1.execution.phase0_to_phaseN.v1.stone
   ├─ + 5.2.evaluation.v1.guard
   ├─ + 5.2.evaluation.v1.stone
   ├─ + 5.3.verification.v1.guard
   ├─ + 5.3.verification.v1.stone
   ├─ + 5.5.playtest.v1.guard
   ├─ + 5.5.playtest.v1.stone
   └─ + refs/template.[feedback].v1.[given].by_human.md

🌲 go on then,
   ├─ .behavior/v{DATE}.same-behavior/0.wish.md
   └─ [2mtip: use --open to open the wish automatically[0m

🍄 we'll remember,
   ├─ branch feature/idempotent-init-test <-> behavior v{DATE}.same-behavior
   ├─ [2mbranch bound to behavior, to boot via hooks[0m
   └─ [2mbranch bound to route, to drive via hooks[0m"
`;

exports[`init.behavior.idempotent given: [case5] direct: idempotent rerun on same behavior when: [t0] init.behavior executed twice with same name then: second run succeeds (idempotent): second run output (idempotent) 1`] = `
"🦫 oh, behave!
   ├─ ✓ 0.wish.md
   ├─ ✓ 1.vision.guard
   ├─ ✓ 1.vision.stone
   ├─ ✓ 2.1.criteria.blackbox.stone
   ├─ ✓ 2.2.criteria.blackbox.matrix.stone
   ├─ ✓ 2.3.criteria.blueprint.stone
   ├─ ✓ 3.1.1.research.external.product.access._.v1.stone
   ├─ ✓ 3.1.1.research.external.product.claims._.v1.stone
   ├─ ✓ 3.1.3.research.internal.product.code.prod._.v1.stone
   ├─ ✓ 3.1.3.research.internal.product.code.test._.v1.stone
   ├─ ✓ 3.1.5.research.reflection.product.audience._.v1.stone
   ├─ ✓ 3.1.5.research.reflection.product.premortem._.v1.stone
   ├─ ✓ 3.1.5.research.reflection.product.rootcause._.v1.stone
   ├─ ✓ 3.2.distill.repros.experience._.v1.guard
   ├─ ✓ 3.2.distill.repros.experience._.v1.stone
   ├─ ✓ 3.3.1.blueprint.product.v1.guard
   ├─ ✓ 3.3.1.blueprint.product.v1.stone
   ├─ ✓ 4.1.roadmap.v1.stone
   ├─ ✓ 5.1.execution.phase0_to_phaseN.v1.guard
   ├─ ✓ 5.1.execution.phase0_to_phaseN.v1.stone
   ├─ ✓ 5.2.evaluation.v1.guard
   ├─ ✓ 5.2.evaluation.v1.stone
   ├─ ✓ 5.3.verification.v1.guard
   ├─ ✓ 5.3.verification.v1.stone
   ├─ ✓ 5.5.playtest.v1.guard
   ├─ ✓ 5.5.playtest.v1.stone
   └─ ✓ refs/template.[feedback].v1.[given].by_human.md

🌲 go on then,
   ├─ .behavior/v{DATE}.same-behavior/0.wish.md
   └─ [2mtip: use --open to open the wish automatically[0m

🍄 we'll remember,
   ├─ branch feature/idempotent-init-test <-> behavior v{DATE}.same-behavior
   ├─ [2mbranch bound to behavior, to boot via hooks[0m
   └─ [2mbranch bound to route, to drive via hooks[0m"
`;

exports[`init.behavior.idempotent given: [case9] direct: idempotent reruns preserve both binds when: [t0] init.behavior executed three times on same behavior then: first run creates files and both binds succeed 1`] = `
"🦫 oh, behave!
   ├─ + 0.wish.md
   ├─ + 1.vision.guard
   ├─ + 1.vision.stone
   ├─ + 2.1.criteria.blackbox.stone
   ├─ + 2.2.criteria.blackbox.matrix.stone
   ├─ + 2.3.criteria.blueprint.stone
   ├─ + 3.1.1.research.external.product.access._.v1.stone
   ├─ + 3.1.1.research.external.product.claims._.v1.stone
   ├─ + 3.1.3.research.internal.product.code.prod._.v1.stone
   ├─ + 3.1.3.research.internal.product.code.test._.v1.stone
   ├─ + 3.1.5.research.reflection.product.audience._.v1.stone
   ├─ + 3.1.5.research.reflection.product.premortem._.v1.stone
   ├─ + 3.1.5.research.reflection.product.rootcause._.v1.stone
   ├─ + 3.2.distill.repros.experience._.v1.guard
   ├─ + 3.2.distill.repros.experience._.v1.stone
   ├─ + 3.3.1.blueprint.product.v1.guard
   ├─ + 3.3.1.blueprint.product.v1.stone
   ├─ + 4.1.roadmap.v1.stone
   ├─ + 5.1.execution.phase0_to_phaseN.v1.guard
   ├─ + 5.1.execution.phase0_to_phaseN.v1.stone
   ├─ + 5.2.evaluation.v1.guard
   ├─ + 5.2.evaluation.v1.stone
   ├─ + 5.3.verification.v1.guard
   ├─ + 5.3.verification.v1.stone
   ├─ + 5.5.playtest.v1.guard
   ├─ + 5.5.playtest.v1.stone
   └─ + refs/template.[feedback].v1.[given].by_human.md

🌲 go on then,
   ├─ .behavior/v{DATE}.idem-test/0.wish.md
   └─ [2mtip: use --open to open the wish automatically[0m

🍄 we'll remember,
   ├─ branch feature/idempotent-binds-test <-> behavior v{DATE}.idem-test
   ├─ [2mbranch bound to behavior, to boot via hooks[0m
   └─ [2mbranch bound to route, to drive via hooks[0m"
`;
